<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TmsSwitchInfo" Id="{6c375092-dbb6-48f6-92a6-9d3637411307}">
    <Declaration><![CDATA[TYPE TmsSwitchInfo :
STRUCT
	State : TmsSwitchState;
	Mode : TmsSwitchMode;
	Position : TmsSwitchPosition;
	ActPos : MC_LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>