<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TmsSwitchMode" Id="{8609b054-6048-4e5b-a625-370933feaaa0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE TmsSwitchMode :
(
	Automatic := 0,
	Manual := 1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>