<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TmsSwitchPosition" Id="{b63086fa-4975-4bd8-9ffd-efca0ce250fc}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE TmsSwitchPosition :
(
	Up := 0,
	Middle := 1,
	Down := 2,
	Moving := 3
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>